--- a/main.css
+++ b/main.css
@@ -13,9 +13,19 @@ body {
     overflow: hidden;
 }
 
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.fade-in.show {
+    opacity: 1;
+}
+
 .header {
-    background-color: rgba(170, 127, 27, 0.716);
+    background-color: rgba(170, 127, 27, 1); /* Set the desired RGBA color with full opacity */
     padding: 10px 20px;
+    /* Optionally, you can add other styles as needed */
 }
 
 .bio-container {
@@ -29,7 +39,73 @@ body {
     max-width: 750px; /* Adjust maximum width as needed */
 }
 
+@keyframes scaleAndFadeIn {
+    0% {
+        transform: scale(0.5);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.how-it-works-button {
+    background-color: #055b7d;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.how-it-works-button:hover {
+    background-color: #ffd700;
+}
+
+/* Add this CSS to hide the modal by default */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 10% auto; /* Adjust margin for centering */
+    padding: 30px; /* Increase padding for more space */
+    border: 1px solid #888;
+    width: 60%; /* Set desired width */
+    max-width: 600px; /* Set maximum width */
+    max-height: 80%; /* Set maximum height */
+    overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .bio-content {
+    animation: scaleAndFadeIn 1s ease-out; /* Apply the animation */
     flex: 1;
     padding-right: 20px; /* Add right padding */
     display: flex; /* Add display flex */
@@ -40,6 +116,7 @@ body {
 .bio-content h2 {
     margin-bottom: 50px;
     font-size: 37px; /* Adjust the font size as needed */
+    color: #055b7d;
 }
 
 .bio-content p {
@@ -67,7 +144,7 @@ body {
 
 .logo {
     float: left;
-    margin-right: 20px;
+    margin-right: 40px; /* Adjusted margin-right value */
     width: 100px;
     height: auto;
 }
